--- a/tableorder/package.json
+++ b/tableorder/package.json
@@ -1,9 +1,7 @@
 {
   "name": "tableorder",
   "version": "0.1.0",
-  "homepage": "https://nonamehj.github.io/text-tableorder",
-  "predeploy": "npm run deploy",
-  "deploy": "gh-pages -d build",
+  "homepage": "https://nonamehj.github.io/test-tableorder",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
